<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/alarm"
        android:layout_width="330dp"
        android:layout_height="337dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_button"
        android:text="@string/alarm"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@drawable/round_button_cancel"
        android:textAlignment="center"
        android:text="@string/cancel"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="105dp"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/settings" />

</RelativeLayout>